# Agentic-World-AI-Project

./: README.md
Agentic World AI/: pyproject.toml
Agentic World AI/src/my_agent2/: __init__.py  app.py
Agentic World AI/src/my_agent2/All_Agent/: agent-as-tool.py  basic_agent.py  handoff_agent.py  tool_agent.py
